cambio 2, toda la parte web hecha

--- a/sembra/index.html
+++ b/sembra/index.html
@@ -13,6 +13,7 @@
         </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167190993-1"></script>
+
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -160,9 +161,6 @@
             La fuerza va tomando color
         </aside>
         <section id="s11000">
-            <figure id="muestra11000">
-                <img src="./sembra11000-ao.jpg" alt="Sembra">
-            </figure>
             <article>
                 <h2>
                     SEMBRA <small>11000</small>
@@ -238,9 +236,16 @@
                     </tbody>
                 </table>
             </article>
+            
+            <figure id="muestra11000">
+                <img src="./sembra11000-ao.jpg" alt="Sembra">
+            </figure>
         </section>
 
         <section id="s7000">
+            <figure id="muestra7000">
+                <img src="./sembra7000-na.jpg" alt="Sembra">
+            </figure>
             <article>
                 <h2>
                     SEMBRA <small>7000</small>
@@ -336,8 +341,95 @@
                     </tbody>
                 </table>
             </article>
-            <figure id="muestra7000">
-                <img src="./sembra7000-na.jpg" alt="Sembra">
+
+        </section>
+
+
+        <!-- sembra 4mil -->
+        <section id="s4000">
+            <article>
+                <h2>
+                    SEMBRA <small>4000</small>
+                </h2>
+                <table class="schedule-specs">
+                    <tbody>
+                        <tr>
+                            <td class="tabla-clave">Tejido de soporte</td>
+                            <td>Poliéster</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Especificación tejido</td>
+                            <td>Tejido plano</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Tipo de hilo (Dtex)</td>
+                            <td>500*500 D</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Tipo de revestimiento</td>
+                            <td> PVC flexible (laminado de ambos lados) 100% impermeable</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave"> Peso (grs. por metro cuadrado)</td>
+                            <td>430g / m2</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Espesor</td>
+                            <td>350 micrones</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Ancho de rollo</td>
+                            <td> 1,60 mts</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Largo de rollo</td>
+                            <td>60 mts</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Resistencia térmica</td>
+                            <td>-30 ºC a 70 ºC</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Retardante al fuego</td>
+                            <td>SI, NFPA701, M2, B2</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Resistencia a la tracción</td>
+                            <td> 1300/1000N/5 cm</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Resistencia al desgarre (DIN53356)</td>
+                            <td> 160/130N/5 cm</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Fuerza de adherencia</td>
+                            <td> 80N/ 5 cm</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Resistencia UV</td>
+                            <td> Si</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">Protección Anti Hongo</td>
+                            <td>Si</td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave"> <p>Colores</p>
+                                <p>Seleccione color: </p>
+                            </td>
+                            <td class="colors-container">
+                                <span class="color-button" id="sembra4000-b"></span>
+                                <span class="color-button" id="sembra4000-vo"></span>
+                                
+                                <span class="color-button" id="sembra4000-g"></span>
+                                <span class="color-button" id="sembra4000-n"></span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+            <figure id="muestra4000">
+                <img src="./sembra4000-b.jpg" alt="Sembra">
             </figure>
         </section>
 
