Arreglo de las categorias con colores cruzados al seleccionarlos

--- a/sembra/index.html
+++ b/sembra/index.html
@@ -418,11 +418,11 @@
                                 <p>Seleccione color: </p>
                             </td>
                             <td class="colors-container">
-                                <span class="color-button" id="sembra4000-b"></span>
-                                <span class="color-button" id="sembra4000-vo"></span>
+                                <span class="color-button-4 button-color-active" id="sembra4000-b"></span>
+                                <span class="color-button-4" id="sembra4000-vo"></span>
                                 
-                                <span class="color-button" id="sembra4000-g"></span>
-                                <span class="color-button" id="sembra4000-n"></span>
+                                <span class="color-button-4" id="sembra4000-g"></span>
+                                <span class="color-button-4" id="sembra4000-n"></span>
                             </td>
                         </tr>
                     </tbody>
