--- a/sembra/index.html
+++ b/sembra/index.html
@@ -53,6 +53,10 @@
                 <li class="nav-item pull-right">
                     <a class="nav-link" href="#s7000" data-stopPropagation="true">7000</a>
                   </li>
+                    <li class="nav-item pull-right">
+                        <a class="nav-link" href="#s4000" data-stopPropagation="true">4000</a>
+
+                  </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#blackout-exterior" data-stopPropagation="true">Blackout Exterior</a>
                 </li>
