modificaciones en sembra 11000

--- a/sembra/index.html
+++ b/sembra/index.html
@@ -231,6 +231,9 @@
                                 <span class="color-button-11" id="sembra11000-n"></span>
                                 <span class="color-button-11" id="sembra11000-vc"></span>
                                 <span class="color-button-11" id="sembra11000-vo"></span>
+                                <span class="color-button-11" id="sembra11000-ac"></span>
+                                <span class="color-button-11" id="sembra11000-r"></span>
+                                <span class="color-button-11" id="sembra11000-a"></span>
                             </td>
                         </tr>
                     </tbody>
