Agregado de microperforado 1,50 ancho

--- a/sembra/index.html
+++ b/sembra/index.html
@@ -630,6 +630,7 @@
             <article>
                 <h2>
                     SEMBRA <small>Microperforado</small>
+                    <h3>Ancho 1,50 mts / 3 mts</h3>
                 </h2>
                 <br><br>
                 <table class="schedule-specs">
@@ -660,7 +661,7 @@
                         </tr>
                         <tr>
                             <td class="tabla-clave">Ancho de rollo</td>
-                            <td> 3 mts</td>
+                            <td> 1,50 mts / 3 mts</td>
                         </tr>
                         <tr>
                             <td class="tabla-clave">Largo de rollo</td>
@@ -708,6 +709,7 @@
                     </tbody>
                 </table>
             </article>
+        </section>
         </section>
         <section id="screen-exterior">
             <article>
@@ -808,9 +810,7 @@
         </section>
         <br><br>
         <section id="contact">
-            <center> 
-                <h2>Contáctenos</-h2>
-            </center>
+                <h2>Contáctenos</h2>
             
             <div id="form">
                 <p>
