Arreglo de colores de sembra

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                         </tr>
                         <tr>
                             <td class="tabla-clave"> <p>Colores</p>
-                            <p>Seleccione color:</p> </td>
+                            <p>Seleccione color 3 mts:</p> </td>
                             <td class="colors-container">
                                 <span class="color-button-microperforado button-color-active"
                                     id="microperforado-azul"></span>
@@ -708,6 +708,15 @@
                                 <span class="color-button-microperforado" id="microperforado-verde"></span>
                                 <span class="color-button-microperforado" id="microperforado-gris"></span>
                                 <span class="color-button-microperforado" id="microperforado-mostaza"></span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="tabla-clave">
+                            <p>Seleccione color 1,50 mts:</p> </td>
+                            <td class="colors-container">
+                                <span class="color-button-microperforado" id="microperforado-negro"></span>
+                                <span class="color-button-microperforado" id="microperforado-verde"></span>
+                                <span class="color-button-microperforado" id="microperforado-gris"></span>
                             </td>
                         </tr>
                     </tbody>
