Cambios de img carrousel

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                                 <div class="carousel-item active">
                                     <a href="#s11000">
                                         <picture>
-                                            <source srcset="./img/Slide-SEMBRA-11000-mobile.jpg" media="(max-width: 480px)">
-                                                <img src="./img/Slide-SEMBRA-11000.jpg" class="d-block w-100 d-print-block" alt="...">
+                                            <source srcset="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-11000-mobile.webp" media="(max-width: 480px)">
+                                                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-11000.webp" class="d-block w-100 d-print-block" alt="...">
                                         </picture>
                                     </a>
                                 </div>
@@ -103,8 +103,8 @@
                                 <div class="carousel-item">
                                     <a href="#s7000">
                                         <picture>
-                                            <source srcset="./img/Slide-SEMBRA-7000-mobile.jpg" media="(max-width: 480px)">
-                                                <img src="./img/Slide-SEMBRA-7000.jpg" class="d-block w-100 d-print-block" alt="...">
+                                            <source srcset="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-7000-mobile.webp" media="(max-width: 480px)">
+                                                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-7000.webp" class="d-block w-100 d-print-block" alt="...">
                                         </picture>
                                     </a>
                                 </div>
@@ -113,8 +113,8 @@
                                 <div class="carousel-item">
                                     <a href="#blackout-exterior">
                                         <picture>
-                                            <source srcset="./img/Slide-SEMBRA-BLACKOUT-EXTERIOR-mobile.jpg" media="(max-width: 480px)">
-                                                <img src="./img/Slide-SEMBRA-BLACKOUT-EXTERIOR.jpg" class="d-block w-100" alt="...">
+                                            <source srcset="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-BLACKOUT-EXTERIOR-mobile.webp" media="(max-width: 480px)">
+                                                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-BLACKOUT-EXTERIOR.webp" class="d-block w-100" alt="...">
                                         </picture>
                                     </a>
                                 </div>
@@ -122,8 +122,8 @@
                                 <div class="carousel-item">
                                     <a href="#cristal">
                                         <picture>
-                                            <source srcset="./img/Slide-SEMBRA-CRISTAL-mobile.jpg" media="(max-width: 480px)">
-                                                <img src="./img/Slide-SEMBRA-CRISTAL.jpg" class="d-block w-100" alt="...">
+                                            <source srcset="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-CRISTAL-mobile.webp" media="(max-width: 480px)">
+                                                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-CRISTAL.webp" class="d-block w-100" alt="...">
                                         </picture>
                                     </a>
 
@@ -133,8 +133,8 @@
                                 <div class="carousel-item">
                                     <a href="#microperforado">
                                         <picture>
-                                            <source srcset="./img/Slide-SEMBRA-MICROPERFORADO-mobile.jpg" media="(max-width: 480px)">
-                                                <img src="./img/Slide-SEMBRA-MICROPERFORADO.jpg" class="d-block w-100" alt="...">
+                                            <source srcset="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-MICROPERFORADO-mobile.webp" media="(max-width: 480px)">
+                                                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-MICROPERFORADO.webp" class="d-block w-100" alt="...">
                                         </picture>
                                     </a>
                                 </div>
@@ -143,8 +143,8 @@
                                 <div class="carousel-item">
                                     <a href="#screen-exterior">
                                         <picture>
-                                            <source srcset="./img/Slide-SEMBRA-SCREEN-EXTERIOR-mobile.jpg" media="(max-width: 480px)">
-                                                <img src="./img/Slide-SEMBRA-SCREEN-EXTERIOR.jpg" class="d-block w-100" alt="...">
+                                            <source srcset="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-SCREEN-EXTERIOR-mobile.webp" media="(max-width: 480px)">
+                                                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/img-home/Slide-SEMBRA-SCREEN-EXTERIOR.webp" class="d-block w-100" alt="...">
                                         </picture>
                                     </a>
                                 </div>
