Cambios de enlace en img

--- a/index.html
+++ b/index.html
@@ -249,13 +249,13 @@
             </article>
             
             <figure id="muestra11000">
-                <img src="./sembra11000-ao.jpg" alt="Sembra">
+                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/Telas/11000/sembra11000-ao.webp" alt="Sembra">
             </figure>
         </section>
 
         <section id="s7000">
             <figure id="muestra7000">
-                <img src="./sembra7000-na.jpg" alt="Sembra">
+                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/Telas/7000/sembra7000-na.webp" alt="Sembra">
             </figure>
             <article>
                 <h2>
@@ -440,7 +440,7 @@
                 </table>
             </article>
             <figure id="muestra4000">
-                <img src="./sembra4000-b.jpg" alt="Sembra">
+                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/Telas/4000/sembra4000-b.webp" alt="Sembra">
             </figure>
         </section>
 
@@ -449,7 +449,7 @@
 
         <section id="blackout-exterior">
             <figure>
-                <img src="./blackoutexterior.jpg" alt="Sembra">
+                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/Telas/Blackout-Exterior/blackoutexterior.webp" alt="Sembra">
             </figure>
             <article>
                 <h2>
@@ -628,12 +628,12 @@
                     </article>
                     <button id="next" class="nav-cristal-btn"> > </button>
                     <figure>
-                        <img src="./cristal.jpg" alt="Sembra">
+                        <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/Telas/Cristal/cristal.webp" alt="Sembra">
                     </figure>
         </section>
         <section id="microperforado">
             <figure id="muestra-microperforado">
-                <img src="./microperforado-azul.jpg" alt="Sembra Microperforado">
+                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/Telas/Microperforado/microperforado-azul.webp" alt="Sembra Microperforado">
             </figure>
             <article>
                 <h2>
@@ -803,7 +803,7 @@
                 </table>
             </article>
             <figure id="muestra-screen-exterior">
-                <img src="./screen-exterior-blanco.jpg" alt="Sembra Screen Exterior">
+                <img src="https://cdngroup.sfo3.cdn.digitaloceanspaces.com/sembra-images/Telas/Screen-Exterior/screen-exterior-blanco.webp" alt="Sembra Screen Exterior">
             </figure>
         </section>
         <section id="organization">
